# learneCMake

./: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.h
configured/: CMakeLists.txt  config.hpp.in
